@@ -27,6 +27,7 @@ or info related to the entry. <http://sourceforge.net/projects/vpopmail/>
 	- vpopmail.c: remove unused sys/varargs.h include.
 	- vdominfo: fix broken -a option.
 	- vdominfo: better display of real name for alias domains. [981335]
+	- vpopmail.c: Improved maildir_to_email() function. [953439]
 
 	Gentoo Port
 	- Integrate vuserinfo patch to fix the -a option and to display 
